[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []
# good_lp = ["dep:microlp"]

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
good_lp = {version = "1.14.2", features = ["microlp"], default-features = false }
kiddo = "5.2.3"
microlp = "0.2.11"
minilp = "0.2.2"
ordered-float = "5.1.0"
pico-args = "0.5.0"
regex = "1.12.2"
tinyjson = "2.5.1"
union-find = "0.4.3"

# Solution dependencies
